# conkyrc

./: .python-version  README.md  conkyrc  downloadWeather.sh  download_weather.py  get_weather.py  pyproject.toml  requirements.txt  setup.py
nws_weather/: nws_to_yahoo_code_map.json  nws_weather.py
