[project]
name = "nws_weather"
version = "0.1.1"
description = "A CLI tool for fetching and mapping NWS weather data"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "typer",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nws_weather = ["nws_to_yahoo_code_map.json"]

[project.scripts]
nwsweather = "nws_weather.nws_weather:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100  # Set the line length for formatting

[tool.ruff.lint]
select = ["E", "F", "W", "C"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"